[package]
name = "growthbook-sdk-rust"
# should match model.rs SDK_VERSION
version = "0.0.1"
edition = "2021"
metadata = { description = "GrowthBook SDK for Rust", license = "MIT", rust-version = "1.71.0" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
derive_builder = "0.12.0"
serde_json = "1.0.96"
url = "2.4.0"
data-encoding = "2.4.0"
aes = "0.8.2"
cbc = "0.1.2"
regex = "1.8.4"
log = "0.4.19"
reqwest = { version = "0.11.18", default-features = false, features = ["default-tls", "json"] }
chrono = "0.4.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", default-features = false, features = ["rt", "macros", "time"] }

[dev-dependencies]
