[package]
name = "growthbook-sdk-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
growthbook-sdk-rust = { path = "../.." }
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.26"
axum-macros = "0.3.7"